# biaopan

./: .gitignore  README.md  build_watch.bat  sdkconfig.bsp.esp32_s3_eye  send_date_cmd.py
biaopan_77eb1f0/examples/display/: README.md  pytest_display.py
biaopan_77eb1f0/examples/display/main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  main.c  watch_face.c  watch_face.h  watch_zh_patch_font.c
biaopan_77eb1f0/examples/display/sdkconfig/: sdkconfig.bsp.esp-box  sdkconfig.bsp.esp-box-3  sdkconfig.bsp.esp-box-lite  sdkconfig.bsp.esp32_c3_lcdkit  sdkconfig.bsp.esp32_p4_eye  sdkconfig.bsp.esp32_p4_function_ev_board  sdkconfig.bsp.esp32_s2_kaluga_kit  sdkconfig.bsp.esp32_s3_eye  sdkconfig.bsp.esp32_s3_korvo_2  sdkconfig.bsp.esp32_s3_lcd_ev_board  sdkconfig.bsp.esp32_s3_usb_otg  sdkconfig.bsp.esp_vocat  sdkconfig.bsp.esp_wrover_kit  sdkconfig.bsp.m5_atom_s3  sdkconfig.bsp.m5dial  sdkconfig.bsp.m5stack_core  sdkconfig.bsp.m5stack_core_2  sdkconfig.bsp.m5stack_core_s3  sdkconfig.bsp.m5stack_tab5
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  watch_face.c  watch_face.h  watch_zh_patch_font.c
